Fixed overlap issue, then realized I was on the wrong branch

--- a/src/localfinds/static/css/style.css
+++ b/src/localfinds/static/css/style.css
@@ -37,6 +37,8 @@
 
     /* Table widths */
     --table-width: 90%;
+    --account-menu-width: 360px;
+    --account-menu-width-small: 240px;
 
     /* Misc */
     --item-shadow: 1px 2px 3px rgba(0,0,0,0.1)
@@ -96,7 +98,7 @@ a:hover {
 }
 
 .account-nav {
-    width: 400px;
+    width: var(--account-menu-width);
     display: block;
     align-items: center;
     text-align: center;
@@ -124,12 +126,15 @@ nav li a {
 }
 
 .account-menu {
-    display:none;
+    position: absolute;
+    display: none;
 }
 
 .menu-btn-container {
-    width: 400px;
+    width: var(--account-menu-width);
 }
+
+
 
 /* BUTTONS */
 .btn {
@@ -275,7 +280,6 @@ footer {
 /* LAYOUT - HEADER */
 .site-header {
     width: 100%;
-    height: 20%;
     display: block;
     justify-content: space-between;
     align-items: center;
@@ -283,6 +287,7 @@ footer {
 
 .account-nav {
     width: auto;
+    height: 30%;
     display: block;
     align-items: baseline;
     gap: 20px;
@@ -316,11 +321,11 @@ nav li a {
 }
 
 .menu-btn-container {
-    width: 100%;
+    width: var(--account-menu-width-small);
 }
 
 .account-menu {
-    width: 100%;
+    width: auto;
     display:none;
 }
 
